@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2021-10-01
+ * Added delete_object() method for wing.object to get around validations on things like prettier.
+
 2021-09-29
  * Posting to /api/session will generate a cookie.
 
